zno-macro-draft/tests/zno/ui/err/003-name-is-boolean.stderr
error: `name` value should be a string
 --> tests/zno/ui/err/003-name-is-boolean.rs:3:9
  |
3 | #[zno(name = true)]
  |         ^^^^
