zno-macro-draft/tests/zno/ui/err/003-name-is-boolean.rs
use zno::zno;

#[zno(name = true)]
fn f() {}

fn main() {}
